[package]
name = "hconnect"
version = "0.1.0"
description = "A tool to establish a TCP connection to a host behind a proxy"
documentation = "https://github.com/kiron1/hconnect"
homepage = "https://github.com/kiron1/hconnect"
repository = "https://github.com/kiron1/hconnect"
readme = "README.md"
license-file = "LICENSE.txt"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13"
bytes = "1.1"
clap = { version = "3.1", features = ["derive"] }
cross-krb5 = { version = "0.2", default-features = false }
dirs = "4.0"
# env_logger = "0.9"
http = "0.2"
hyper = { version = "0.14", features = ["http1", "client", "tcp"] }
netrc = "0.4"
# thiserror = "1.0"
tokio = { version = "1", features = ["io-std", "io-util", "rt-multi-thread", "net", "macros", "sync", "signal"] }
tower = { version = "0.4", features = ["util"] }
