[package]
name = "hconnect"
version = "0.2.0"
description = "A tool to establish a TCP connection to a host behind a proxy"
documentation = "https://github.com/kiron1/hconnect"
homepage = "https://github.com/kiron1/hconnect"
repository = "https://github.com/kiron1/hconnect"
readme = "README.md"
license-file = "LICENSE.txt"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
debuginfo = 0
lto = true
opt-level = "z"
strip = true

[dependencies]
anyhow = "1.0"
base64 = "0.21"
bytes = "1.1"
clap = { version = "4.4", features = ["derive", "env"] }
cross-krb5 = { version = "0.3", default-features = false }
dirs = "5.0"
# env_logger = "0.9"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
netrc = "0.4"
pin-project-lite = "0.2"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
